--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
 <script>
         
 const urlParams = new URLSearchParams(window.location.search);
-const query = urlParams.get('client');
-console.log(client); // Output: "javascript"
+const client = urlParams.get('client');
 
 $(function() 
 {
