--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title class="menutitle">*menutitle*</title>
      
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./components/style.css" />
+    <link rel="stylesheet" href="./standardcomponents/style.css" />
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
@@ -287,7 +287,7 @@ $(function()
 </script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="./components/app.js"></script>
+<script src="./standardcomponents/app.js"></script>
 
 <!-- .................../ JS Code for smooth scrolling /...................... -->
 
