--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ $(function()
             function loadMenu(lang) 
             {
              // $.getJSON('./menu/params' + '.json', function(params) // Process inhoud van installation parameters json-file
-                $.getJSON('../clientzone/x/menu/params.json', function(params) // Process inhoud van installation parameters json-file
+                $.getJSON('../clientzone/' + client + '/menu/params.json', function(params) // Process inhoud van installation parameters json-file
                 {  
 
                 // $.getJSON('./menu/menu' + '.json', function(data) // Process inhoud van json-file
