--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ $(function()
              // $.getJSON('./menu/params' + '.json', function(params) // Process inhoud van installation parameters json-file
                 
                 //        https://sjaakgr.github.io/clientmenus/clientzone/tertulias/menu/params.json
-                $.getJSON('./clientzone/' + client + '/menu/params.json', function(params) // Process inhoud van installation parameters json-file
+                $.getJSON('./menus/data/' + client + '/params.json', function(params) // Process inhoud van installation parameters json-file
                 {  
 
                 // $.getJSON('./menu/menu' + '.json', function(data) // Process inhoud van json-file
@@ -247,7 +247,7 @@ $(function()
                     var p2 = ''; 
                     if (i!="")
                         { var p2 = '  <div class="food-img" align=center> '
-                                 + '    <img  src="' + l + i + '" alt="' + n + '" /> '
+                                 + '    <img  src="' + l + client + i + '" alt="' + n + '" /> '
                                  + '  </div> ' ;}
                     var p3 = '  <div class="food-description" align=center> ';
                     var p4 = '';
