--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ $(function()
 
                 // $.getJSON('./menu/menu' + '.json', function(data) // Process inhoud van json-file
                 // $.getJSON('https://webkamer.nl/activefiles/corsextract.php?file=menu.json', function(data) // Process inhoud van json-file
-                $.getJSON(params.menulocation + params.menufile, function(data) // Process inhoud van json-file
+                $.getJSON(params.menulocation + client  + params.menufile, function(data) // Process inhoud van json-file
                 {
                 // Clear the variable content             
                 // -- Restaurant info block            
