--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ $(function()
             function loadMenu(lang) 
             {
              // $.getJSON('./menu/params' + '.json', function(params) // Process inhoud van installation parameters json-file
-                
+                alert('./menus/data/' + client + '/params.json');
                 //        https://sjaakgr.github.io/clientmenus/clientzone/tertulias/menu/params.json
                 $.getJSON('./menus/data/' + client + '/params.json', function(params) // Process inhoud van installation parameters json-file
                 {  
