--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@ $(function()
             function loadMenu(lang) 
             {
              // $.getJSON('./menu/params' + '.json', function(params) // Process inhoud van installation parameters json-file
-                alert('./menus/data/' + client + '/params.json');
                 //        https://sjaakgr.github.io/clientmenus/clientzone/tertulias/menu/params.json
                 $.getJSON('./menus/data/' + client + '/params.json', function(params) // Process inhoud van installation parameters json-file
                 {  
 
                 // $.getJSON('./menu/menu' + '.json', function(data) // Process inhoud van json-file
                 // $.getJSON('https://webkamer.nl/activefiles/corsextract.php?file=menu.json', function(data) // Process inhoud van json-file
-                $.getJSON(params.menulocation + client  + params.menufile, function(data) // Process inhoud van json-file
+
+                $.getJSON(params.menulocation + client + '/' + params.menufile, function(data) // Process inhoud van json-file
                 {
                 // Clear the variable content             
                 // -- Restaurant info block            
