--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ $(function()
                     var p2 = ''; 
                     if (i!="")
                         { var p2 = '  <div class="food-img" align=center> '
-                                 + '    <img  src="' + l + client + i + '" alt="' + n + '" /> '
+                                 + '    <img  src="' + l + client + '/' + i + '" alt="' + n + '" /> '
                                  + '  </div> ' ;}
                     var p3 = '  <div class="food-description" align=center> ';
                     var p4 = '';
