--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <!--       ----------------------------- -->
 <!--       ----------- Paginakop ------- -->
 <!--       ----------------------------- -->    
-    <section class="showcase-area" id="showcase">
-        
+    <section class="showcase-area" id="showcase"  style="background-image: url('./menus/images/andereklant/banner.jpg');">
+
         <p style="text-align:right;">
             <img src="https://cdn.countryflags.com/thumbs/united-kingdom/flag-round-250.png" alt="English" class="flag" data-lang="en" width="20" height="auto">
             <img src="https://cdn.countryflags.com/thumbs/portugal/flag-round-250.png" alt="Português" class="flag" data-lang="pt" width="20" height="auto">
