--- a/index.html
+++ b/index.html
@@ -136,10 +136,8 @@ $(function()
                     $('#lijst .coursecluster').empty();
                 
                 // -- The banner picture                          
-                    $('#showcase .bannerstart').empty();
-
                     var section = document.getElementById("showcase");
-                    section.style.backgroundImage = "url('../menus/images/" + client + "/" + "banner.jpg')";
+                    section.style.backgroundImage = "url('./menus/images/" + client + "/" + "banner.jpg')";
 
                 // Populate the restaurant info with the data from the JSON file
                     $.each(data.identification, function(index, identitem) 
