--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ $(function()
                     section.style.backgroundImage = "url('./menus/images/" + client + "/" + "banner.jpg')";
 
 
-                    $('#showcase .buttonrow').aempty(); 
+                    $('#showcase .buttonrow').empty(); 
 
                     $.each(data.languages, function(index, langitem) 
                     {
