--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ $(function()
 
 
                    // $('#showcase .buttonrow').empty(); 
-                    $('#showcase .languagebuttons').empty(); 
+                    $('#languagebuttons').empty(); 
 
                     $.each(data.languages, function(index, langitem) 
                     {
@@ -157,7 +157,7 @@ $(function()
                    '" width="20" height="auto">';
 
                  //  $('#showcase .buttonrow').append(lrow); 
-                   $('#showcase .languagebuttons').append(lrow); 
+                   $('#languagebuttons').append(lrow); 
 
                    
             
