--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ $(function()
 
 
                    // $('#showcase .buttonrow').empty(); 
-                    $('#languagebuttons').empty(); 
+                    //$('#languagebuttons').empty(); 
 
                     $.each(data.languages, function(index, langitem) 
                     {
