--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ $(function()
     
 
 
-loadMenu('nl'); // Load the English menu by default   
+                loadMenu('nl', params, data); // Load the English menu by default   
                 
                 $('.flag').click(function()     // Handle click events on the language selector flags
                     {
