--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ $(function()
         // ---------------- //
            
 
-
+                var lang = 'nl';
 
                 // $.getJSON('./menu/params' + '.json', function(params) // Process inhoud van installation parameters json-file
                 //        https://sjaakgr.github.io/clientmenus/clientzone/tertulias/menu/params.json
