--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ $(function()
 
                         if (l_d == 'y') 
                             {var lang = l_lc;}
+                        alert('l_lc:' + l_lc + '/lang:' + lang + '/l`_d' + l_d);
                 });  
 
     
