--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@ $(function()
                         $('#languagebuttons').append(lrow); 
 
                         if (l_d == 'y') 
-                            {var lang = l_lc;}
+                            { lang = l_lc;
+                            alert('ik zet m aan');
+                        }
                         alert('l_lc:' + l_lc + '/lang:' + lang + '/l`_d' + l_d);
                 });  
 
