--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
         </div>
 
         <center>
-            <a href="#lijst" class="btn btn-primary">Menu</a>
-       </center>
+            <a href="#lijst" class="btn btn-primary"></a>
+        </center>
 
     </section>
     
     <section id="about">
         <div class="about-wrapper container">
             <div class="about-text">
-                <p class="small">About Us</p>
+                <p class="small"></p>
                 
                 <h2 class="about-list-header"></h2>
 
