--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <center>
-            <a href="#lijst" class="btn btn-primary"></a>
+            <a href="#lijst" class="btn btn-primary">Start</a>
         </center>
 
     </section>
